add property to connect your iOS application to Android Studio for running it on a simulated or real device

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,6 @@ kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.native.binary.memoryModel=experimental
+
+# to connect your iOS application to Android Studio for running it on a simulated or real device
+xcodeproj=iosApp/SimpleLoginIOS.xcodeproj
