--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,9 @@ appcompat_version = "1.4.2"
 constraintlayout_version = "2.1.4"
 material_version = "1.6.1"
 kotlinx_serialization_version = "1.3.3"
+activity_version = "1.4.0"
+compose_version = "1.1.1"
+lifecycle_viewmodel_compose_version = "2.4.1"
 
 [libraries]
 #plugins
@@ -20,6 +23,7 @@ kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-
 
 #androidx
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat_version" }
+androidx-activity = { module = "androidx.activity:activity-ktx", version.ref = "activity_version" }
 androidx-constariantlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout_version" }
 android-material = { module = "com.google.android.material:material", version.ref = "material_version" }
 
@@ -38,6 +42,13 @@ ktor-serialization-kotlinx = { module = "io.ktor:ktor-serialization-kotlinx-json
 ktor-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor_version" }
 ktor-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor_version" }
 ktor-ios = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor_version" }
+
+#jetpack compose
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity_version" }
+androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "compose_version" }
+androidx-compose-animation = { module = "androidx.compose.animation:animation", version.ref = "compose_version" }
+androidx-compose-uitooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose_version" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle_viewmodel_compose_version" }
 
 
 [bundles]
