--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ kotlinx_serialization_version = "1.3.3"
 activity_version = "1.4.0"
 compose_version = "1.1.1"
 lifecycle_version = "2.4.1"
+coil_version = "2.1.0"
 
 [libraries]
 #plugins
@@ -51,6 +52,7 @@ androidx-compose-material = { module = "androidx.compose.material:material", ver
 androidx-compose-animation = { module = "androidx.compose.animation:animation", version.ref = "compose_version" }
 androidx-compose-uitooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose_version" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle_version" }
+io-coil = { module = "io.coil-kt:coil-compose", version.ref = "coil_version" }
 
 
 [bundles]
